idParser.java
// Generated from /home/martin/Documentos/Projects/Ubp/TC/LexerFinal/al/src/main/java/com/lexer/id.g4 by ANTLR 4.8

    package com.lexer;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class idParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PA=1, PC=2, LA=3, LC=4, CA=5, CC=6, PYC=7, EQ=8, COMA=9, COMILLA=10, INT=11, 
		CHAR=12, DOUBLE=13, FLOAT=14, VOID=15, RETURN=16, FOR=17, IF=18, ELSE=19, 
		WHILE=20, SUM=21, RESTA=22, MULT=23, DIV=24, RESTO=25, COMP=26, LOGIC=27, 
		INC_DEC=28, ID=29, NUMERO=30, FLOTANTE=31, LETRAMAYUSCULA=32, HORA=33, 
		FECHA=34, EMAIL=35, COMENTARIO=36, WS=37, OTRO=38;
	public static final int
		RULE_balance = 0, RULE_prog = 1, RULE_instruccion = 2, RULE_operacion = 3, 
		RULE_declaracion = 4, RULE_tipodato = 5, RULE_tipoaritmetica = 6, RULE_tipologica = 7, 
		RULE_asignacion = 8, RULE_valor = 9, RULE_op_aritmetica = 10, RULE_op_logica = 11, 
		RULE_tipo_funcion = 12, RULE_dec_funcion = 13, RULE_llamada_funcion = 14, 
		RULE_dec_parametros = 15, RULE_estructuras = 16, RULE_ciclo_for = 17, 
		RULE_bloque_instruccion = 18, RULE_ciclo_while = 19, RULE_condicion_if = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"balance", "prog", "instruccion", "operacion", "declaracion", "tipodato", 
			"tipoaritmetica", "tipologica", "asignacion", "valor", "op_aritmetica", 
			"op_logica", "tipo_funcion", "dec_funcion", "llamada_funcion", "dec_parametros", 
			"estructuras", "ciclo_for", "bloque_instruccion", "ciclo_while", "condicion_if"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "'='", "','", 
			"'\"'", "'int '", "'char '", "'double '", "'float '", "'void '", "'return '", 
			"'for'", null, "'else'", "'while'", "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PA", "PC", "LA", "LC", "CA", "CC", "PYC", "EQ", "COMA", "COMILLA", 
			"INT", "CHAR", "DOUBLE", "FLOAT", "VOID", "RETURN", "FOR", "IF", "ELSE", 
			"WHILE", "SUM", "RESTA", "MULT", "DIV", "RESTO", "COMP", "LOGIC", "INC_DEC", 
			"ID", "NUMERO", "FLOTANTE", "LETRAMAYUSCULA", "HORA", "FECHA", "EMAIL", 
			"COMENTARIO", "WS", "OTRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "id.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    String tipovariable="";
	    Funciones funciones= new Funciones();
	    String nombreVariable=null;
	    Object valor=null;
	    String variableAsignada=null;
	    String tipoaritmetica="";
	    String tipologica="";

	public idParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BalanceContext extends ParserRuleContext {
		public Token PA;
		public Token PC;
		public Token LA;
		public Token LC;
		public Token CA;
		public Token CC;
		public TerminalNode PA() { return getToken(idParser.PA, 0); }
		public List<BalanceContext> balance() {
			return getRuleContexts(BalanceContext.class);
		}
		public BalanceContext balance(int i) {
			return getRuleContext(BalanceContext.class,i);
		}
		public TerminalNode PC() { return getToken(idParser.PC, 0); }
		public TerminalNode LA() { return getToken(idParser.LA, 0); }
		public TerminalNode LC() { return getToken(idParser.LC, 0); }
		public TerminalNode CA() { return getToken(idParser.CA, 0); }
		public TerminalNode CC() { return getToken(idParser.CC, 0); }
		public BalanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_balance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterBalance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitBalance(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitBalance(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BalanceContext balance() throws RecognitionException {
		BalanceContext _localctx = new BalanceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_balance);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PA:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				((BalanceContext)_localctx).PA = match(PA);
				 System.out.println("PA: " + ((BalanceContext)_localctx).PA.getText() + " -- (Linea " + ((BalanceContext)_localctx).PA.getLine() + ")"); 
				setState(44);
				balance();
				setState(45);
				((BalanceContext)_localctx).PC = match(PC);
				 System.out.println("PC: " + ((BalanceContext)_localctx).PC.getText() + " -- (Linea " + ((BalanceContext)_localctx).PC.getLine() + ")"); 
				setState(47);
				balance();
				}
				break;
			case LA:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				((BalanceContext)_localctx).LA = match(LA);
				 System.out.println("LA: " + ((BalanceContext)_localctx).LA.getText() + " -- (Linea " + ((BalanceContext)_localctx).LA.getLine() + ")"); 
				setState(51);
				balance();
				setState(52);
				((BalanceContext)_localctx).LC = match(LC);
				 System.out.println("LC: " + ((BalanceContext)_localctx).LC.getText() + " -- (Linea " + ((BalanceContext)_localctx).LC.getLine() + ")"); 
				setState(54);
				balance();
				}
				break;
			case CA:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				((BalanceContext)_localctx).CA = match(CA);
				 System.out.println("CA: " + ((BalanceContext)_localctx).CA.getText() + " -- (Linea " + ((BalanceContext)_localctx).CA.getLine() + ")"); 
				setState(58);
				balance();
				setState(59);
				((BalanceContext)_localctx).CC = match(CC);
				 System.out.println("CC: " + ((BalanceContext)_localctx).CC.getText() + " -- (Linea " + ((BalanceContext)_localctx).CC.getLine() + ")"); 
				setState(61);
				balance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				instruccion();
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << CHAR) | (1L << DOUBLE) | (1L << FLOAT) | (1L << VOID) | (1L << RETURN) | (1L << FOR) | (1L << IF) | (1L << WHILE) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public EstructurasContext estructuras() {
			return getRuleContext(EstructurasContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitInstruccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(70);
				operacion();
				}
				break;
			case 2:
				{
				setState(71);
				estructuras();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionContext extends ParserRuleContext {
		public Token ID;
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public TerminalNode PYC() { return getToken(idParser.PYC, 0); }
		public TerminalNode ID() { return getToken(idParser.ID, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(idParser.RETURN, 0); }
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterOperacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitOperacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitOperacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operacion);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
			case DOUBLE:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				declaracion();
				setState(75);
				match(PYC);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				((OperacionContext)_localctx).ID = match(ID);
				setState(78);
				asignacion();
				setState(79);
				match(PYC);
				 funciones.asignacion(((OperacionContext)_localctx).ID.getText(),null,tipovariable);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				match(RETURN);
				setState(83);
				match(ID);
				setState(84);
				match(PYC);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public Token ID;
		public TipodatoContext tipodato() {
			return getRuleContext(TipodatoContext.class,0);
		}
		public TerminalNode ID() { return getToken(idParser.ID, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				tipodato();
				setState(88);
				((DeclaracionContext)_localctx).ID = match(ID);
				setState(89);
				asignacion();
				 funciones.agregarVarialble(((DeclaracionContext)_localctx).ID.getText(),tipovariable); funciones.asignacion(((DeclaracionContext)_localctx).ID.getText(),valor,null);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				tipodato();
				setState(93);
				((DeclaracionContext)_localctx).ID = match(ID);
				 funciones.agregarVarialble(((DeclaracionContext)_localctx).ID.getText(),tipovariable);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipodatoContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(idParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(idParser.DOUBLE, 0); }
		public TerminalNode FLOAT() { return getToken(idParser.FLOAT, 0); }
		public TerminalNode CHAR() { return getToken(idParser.CHAR, 0); }
		public TipodatoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipodato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterTipodato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitTipodato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitTipodato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipodatoContext tipodato() throws RecognitionException {
		TipodatoContext _localctx = new TipodatoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipodato);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(INT);
				tipovariable="int";
				}
				break;
			case DOUBLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(DOUBLE);
				tipovariable="float";
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(FLOAT);
				tipovariable="float";
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				match(CHAR);
				tipovariable="char";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoaritmeticaContext extends ParserRuleContext {
		public TerminalNode SUM() { return getToken(idParser.SUM, 0); }
		public TerminalNode RESTA() { return getToken(idParser.RESTA, 0); }
		public TerminalNode MULT() { return getToken(idParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(idParser.DIV, 0); }
		public TerminalNode RESTO() { return getToken(idParser.RESTO, 0); }
		public TipoaritmeticaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoaritmetica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterTipoaritmetica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitTipoaritmetica(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitTipoaritmetica(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoaritmeticaContext tipoaritmetica() throws RecognitionException {
		TipoaritmeticaContext _localctx = new TipoaritmeticaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipoaritmetica);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(SUM);
				tipoaritmetica="+";
				}
				break;
			case RESTA:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				match(RESTA);
				tipoaritmetica="-";
				}
				break;
			case MULT:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				match(MULT);
				tipoaritmetica="*";
				}
				break;
			case DIV:
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				match(DIV);
				tipoaritmetica="/";
				}
				break;
			case RESTO:
				enterOuterAlt(_localctx, 5);
				{
				setState(116);
				match(RESTO);
				tipoaritmetica="%";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipologicaContext extends ParserRuleContext {
		public Token COMP;
		public Token LOGIC;
		public TerminalNode COMP() { return getToken(idParser.COMP, 0); }
		public TerminalNode LOGIC() { return getToken(idParser.LOGIC, 0); }
		public TipologicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipologica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterTipologica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitTipologica(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitTipologica(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipologicaContext tipologica() throws RecognitionException {
		TipologicaContext _localctx = new TipologicaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipologica);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMP:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				((TipologicaContext)_localctx).COMP = match(COMP);
				tipologica=((TipologicaContext)_localctx).COMP.getText();
				}
				break;
			case LOGIC:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				((TipologicaContext)_localctx).LOGIC = match(LOGIC);
				tipologica=((TipologicaContext)_localctx).LOGIC.getText();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode EQ() { return getToken(idParser.EQ, 0); }
		public Op_aritmeticaContext op_aritmetica() {
			return getRuleContext(Op_aritmeticaContext.class,0);
		}
		public List<ValorContext> valor() {
			return getRuleContexts(ValorContext.class);
		}
		public ValorContext valor(int i) {
			return getRuleContext(ValorContext.class,i);
		}
		public TerminalNode ID() { return getToken(idParser.ID, 0); }
		public TerminalNode PA() { return getToken(idParser.PA, 0); }
		public TerminalNode PC() { return getToken(idParser.PC, 0); }
		public List<TerminalNode> COMA() { return getTokens(idParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(idParser.COMA, i);
		}
		public TerminalNode INC_DEC() { return getToken(idParser.INC_DEC, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof idListener ) ((idListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof idVisitor ) return ((idVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}
